homeworks/meretskyi/module-03/lesson-10/dev/app-config-map-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: course-app-dev
  labels:
    environment: dev
